# BattleRoyaleOS

./: .gitignore  CLAUDE.md  Cargo.toml  GNUmakefile  PLAN.md  PROJECT_ANALYSIS.md  PROMPT.md  RALPH_LOOP_IMPROVED.md  README.md  limine-benchmark.conf  limine-server.conf  limine-test.conf  limine.conf
kernel/: Cargo.toml  linker-x86_64.ld
kernel/src/: boot.rs  lib.rs  main.rs
kernel/src/api/: graphics.rs  input.rs  mod.rs  network.rs  time.rs  types.rs
kernel/src/app/: hud.rs  input.rs  mod.rs  render.rs  run.rs  terrain.rs
kernel/src/drivers/: mod.rs  pci.rs  serial.rs
kernel/src/drivers/e1000/: descriptors.rs  mod.rs  regs.rs  ring.rs
kernel/src/drivers/vmsvga/: fifo.rs  gmr.rs  mod.rs  regs.rs  svga3d.rs
kernel/src/game/: bot.rs  building.rs  bus.rs  camera.rs  combat.rs  input.rs  inventory.rs  lobby_island.rs  loot.rs  map.rs  mod.rs  party.rs  player.rs  state.rs  storm.rs  weapon.rs  world.rs
kernel/src/gfx/: commands.rs  device.rs  mod.rs  pipeline.rs
kernel/src/gfx/backends/: mod.rs  software.rs  svga3d.rs
kernel/src/graphics/: culling.rs  cursor.rs  font.rs  framebuffer.rs  gpu.rs  gpu3d.rs  gpu_batch.rs  gpu_render.rs  mod.rs  pipeline.rs  rasterizer.rs  tiles.rs  vsync.rs  zbuffer.rs
kernel/src/graphics/ui/: button.rs  list.rs  mod.rs  panel.rs
kernel/src/memory/: allocator.rs  dma.rs  mod.rs  paging.rs
kernel/src/net/: device.rs  mod.rs  protocol.rs  stack.rs
kernel/src/smp/: mod.rs  scheduler.rs  sync.rs
kernel/src/ui/: customization.rs  fortnite_lobby.rs  game_ui.rs  lobby.rs  main_menu.rs  mod.rs  server_select.rs  settings.rs  test_map.rs
(+35 files in other folders)
