[workspace]
resolver = "2"
members = [
    "kernel",
    "renderer",
    "protocol",
    "shared/game-types",
    "apps/game-client",
    "apps/game-server",
    "apps/benchmark",
    "apps/test-harness",
    "boot",
]

[workspace.dependencies]
limine = "0.5"
x86_64 = "0.15"
spin = "0.9"
talc = "4.4"
glam = { version = "0.29", default-features = false, features = ["libm"] }
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-udp",
    "socket-icmp",
    "alloc",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
